Crud operation on employee payroll app

--- a/EmployeePayrollMVC/EmployeePayrollMVC.csproj
+++ b/EmployeePayrollMVC/EmployeePayrollMVC.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\Employee\DeleteEmployee.cshtml~RF151bdf9.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
